fix: z-index select menu

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -39,6 +39,10 @@
   color: $primary_color;
 }
 
+#react-select-3-listbox {
+  z-index: 99;
+}
+
 @media (max-width: $size-sm) {
   .header {
     flex-direction: column;
